--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ body {
   text-align: center;
   font-family: 'Merriweather', serif;
 }
+/*
+CREATED BY BISWARUP BHATTACHARJEE
+EMAIL    : bbiswa471@gmail.com
+PHONE NO : 6290272740
+*/
 
 h1 {
   color: #66BFBF;
